# HttpAutoIndexServer

./: .gitignore  HttpAutoIndexServer.sln  README.md
HttpAutoIndexServer/: CMakeLists.txt  HttpAutoIndexServer.vcxproj  main.cpp
