cmake_minimum_required(VERSION 3.1)
PROJECT(HttpAutoIndexServer)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
find_package(Threads)
AUX_SOURCE_DIRECTORY(src HttpAutoIndexServer)
ADD_EXECUTABLE(HttpAutoIndexServer.out main.cpp)
TARGET_LINK_LIBRARIES(HttpAutoIndexServer.out pthread)
